# 24z-fo

./: .gitignore  Makefile  README.md  data_links.txt  foobar.txt  pyproject.toml  runs.sh  runs2.sh
fo/: architecture.py  data.py  read.py  utils.py
fo/scripts/: test.py  train.py
results/: results.txt  results_o3_30.txt  results_o3_90.txt  results_resnet_30.txt  results_resnet_90.txt
src/fo/: read.py  train.py
