[project]
name = "fo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "towienko", email = "01169218@pw.edu.pl"},
]
dependencies = [
    "numpy>=2.2.1",
    "torch>=2.5.1",
    "optuna>=4.1.0",
    "wandb>=0.19.2",
    "python-dotenv>=1.0.1",
    "scipy>=1.15.1",
    "torchvision>=0.20.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
train = "python3 -m fo.scripts.train"
